version/0.30/_sources/api/solver/_autosummary/settings/y_axis_2.rst.txt
:orphan:

.. _y_axis_2:

y_axis
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.y_axis_2
    :show-inheritance:

.. rubric:: Attributes

====================================================   =======================

Attribute                                                              Summary

====================================================   =======================
:ref:`draw_major_rules <draw_major_rules>`                 Help not available.

:ref:`major_rule_weight <major_rule_weight>`               Help not available.

:ref:`major_rule_line_color <major_rule_line_color>`       Help not available.

:ref:`draw_minor_rules <draw_minor_rules>`                 Help not available.

:ref:`minor_rule_weight <minor_rule_weight>`               Help not available.

:ref:`minor_rule_line_color <minor_rule_line_color>`       Help not available.

====================================================   =======================

.. rubric:: Included in:

====================   ==========================================

Parent                                                    Summary

====================   ==========================================
:ref:`rules <rules>`       Major and minor rule for the X Y Axis.

====================   ==========================================

